fast filters: fix alignment

--- a/frontend/src/app/components/dashboard/db-table-view/saved-filters-panel/saved-filters-dialog/saved-filters-dialog.component.css
+++ b/frontend/src/app/components/dashboard/db-table-view/saved-filters-panel/saved-filters-dialog/saved-filters-dialog.component.css
@@ -120,7 +120,7 @@
 
 .dynamic-column-radio {
     grid-column: 6;
-    margin-top: 0;
+    margin-top: -16px;
     align-self: center;
 }
 
@@ -286,7 +286,7 @@
 
 .column-name {
     grid-column: 2;
-    margin-top: 0;
+    margin-top: -8px;
     align-self: center;
 }
 
@@ -309,7 +309,7 @@
 
 .filter-delete-button {
     grid-column: 1;
-    margin-top: 0;
+    margin-top: -20px;
     margin-right: 0;
     margin-left: 0;
     align-self: center;
@@ -363,7 +363,6 @@
 .comparator-select-field ::ng-deep .mat-mdc-form-field-infix {
     width: 100% !important;
     min-width: fit-content;
-    padding-right: 40px;
     padding-left: 0;
     position: relative;
 }
