--- a/frontend/src/app/components/dashboard/db-table-view/saved-filters-panel/saved-filters-panel.component.css
+++ b/frontend/src/app/components/dashboard/db-table-view/saved-filters-panel/saved-filters-panel.component.css
@@ -1,14 +1,13 @@
 .saved-filters-container {
 	display: flex;
 	flex-direction: column;
-	gap: 8px;
-	margin-bottom: 12px;
 }
 
 .saved-filters-list {
 	display: flex;
 	align-items: center;
 	gap: 16px;
+	margin-bottom: 12px;
 }
 
 .saved-filters-list__first-time-button {
@@ -167,6 +166,7 @@
 	display: flex;
 	align-items: center;
 	gap: 20px;
+	margin-top: -8px;
 	transform: translateX(-10%) scale(0.8);
 }
 
@@ -178,12 +178,12 @@
 }
 
 .filters-where-label {
+	flex-shrink: 0;
 	display: flex;
 	align-items: center;
 	gap: 4px;
-	font-weight: 500;
+	margin-top: -2px !important;
 	white-space: nowrap;
-	flex-shrink: 0;
 }
 
 .filters-where-label .column-name-icon {
@@ -216,7 +216,7 @@
 }
 
 .column-name {
-	margin-top: -8px;
+	margin-top: -4px !important;
 	display: flex;
 	align-items: center;
 	gap: 4px;
